--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
+  "name": "myreads",
+  "version": "0.1.0",
   "dependencies": {
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
