--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "myreads",
   "version": "0.1.0",
   "dependencies": {
+    "lodash": "^4.17.5",
     "prop-types": "^15.6.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
